feat: add timezone conversion to report

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 
 PREFECT_API_KEY=XxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXx
 PREFECT_TENANT_ID=XxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXx
+
+LOCAL_TIMEZONE='US/Central'
