--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@
 PREFECT_API_KEY=XxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXx
 PREFECT_TENANT_ID=XxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXx
 
-LOCAL_TIMEZONE='US/Central'
+# LOCAL_TIMEZONE='US/Central'
+# LOCAL_TIMEZONE='America/Mexico_City'
+LOCAL_TIMEZONE='localtime'
